--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,7 +1,7 @@
 <mat-card class="cardWithShadow">
   <mat-card-content class="p-24">
     <div class="row justify-content-between gap-16">
-      <div class="col-lg-4">
+      <div class="col-4">
         <mat-form-field appearance="outline" class="w-100 hide-hint">
           <input [(ngModel)]="motRecherche"
             matInput
@@ -13,7 +13,7 @@
           </mat-icon>
         </mat-form-field>
       </div>
-      <div class="col-lg-4 d-flex align-items-center justify-content-end">
+      <div class="col-4 d-flex align-items-center justify-content-end">
         <button mat-flat-button (click)="openCourse()" color="primary">
           Ajouter une course
         </button>
