select default devicse

--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -138,7 +138,7 @@
             <div class="col-2">
               <div class="field ">
                 <label htmlFor="currency">Devise</label>
-                <p-dropdown [options]="currencys"  optionLabel="name" name="currency" [(ngModel)]="currency" ></p-dropdown>
+                <p-dropdown [options]="currencys"  optionLabel="name" name="currency" [(ngModel)]="usercurrency" ></p-dropdown>
               </div>
             </div>
           <!--</div>-->
