--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -214,7 +214,7 @@
                         </p-dropdown>
                       </div>
                     </div>
-                    <div style="margin-top: 5px; margin-left: -5px;" class="col-1">
+                    <div (click)="showDialogSelect()"  style="margin-top: 5px; margin-left: -5px;" class="col-1">
                       <button pButton pRipple icon="pi pi-filter-fill" style="margin-top: 20px;" class="p-button-rounded p-button-primary mr-2"></button>
                     </div>
                     <!--<div class="col-3">
@@ -425,5 +425,20 @@
 
   <!--<button pButton class=" mt-2 btnEdit">Modifier</button>-->
 </ng-template>
+
+
+<p-dialog 
+    header="Header" 
+    [modal]="true"
+    [(visible)]="visibleSelect" 
+    [style]="{ width: '50rem' }" 
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" 
+    [maximizable]="true">
+   
+    <p>
+      test
+    </p>
+    
+</p-dialog>
 
 </p-overlayPanel>
