--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -28,7 +28,7 @@
         <ng-container matColumnDef="nom produit">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom du produit</th>
           <td mat-cell *matCellDef="let product">
-            {{ product.name }}
+            {{ product.product.name }}
           </td>
         </ng-container>
 
@@ -37,7 +37,7 @@
             Catégorie
           </th>
           <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.category?.name }}
+            {{ product.product.category?.name }}
           </td>
         </ng-container>
 
