--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -48,7 +48,7 @@
           </th>
           <td mat-cell *matCellDef="let product" class="action-link">
             <a
-            (click)="openDialog(product)"
+            (click)="openDialog(product.product)"
               class="m-r-10 cursor-pointer"
               ><i-tabler name="eye" class="icon-18"></i-tabler
             ></a>
