--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -160,39 +160,49 @@
             </div>
 
             <!-- List of created product-->
-            <div class="ListProduct">
-              <p *ngIf="detailPurchasesForms2.length==0">Aucun produit pour l'instant! Veuillez remplir le formulaire pour ajouter un produit.</p>
+              <!-- Liste des produits créés -->
+<div class="ListProduct">
+  <p *ngIf="detailPurchasesForms2.length == 0">
+    Aucun produit pour l'instant ! Veuillez remplir le formulaire pour ajouter un produit.
+  </p>
 
-              <div class="divtableau">
-                <table *ngIf="detailPurchasesForms2.length!=0">
-                <thead>
-                  <th>Produit </th>
-                  <th>Catégory</th>
-                  <th>Conditionnement</th>
-                  <th>Quantité(unité)</th>
+  <div class="divtableau">
+    <table class="table" *ngIf="detailPurchasesForms2.length != 0">
+      <thead>
+        <tr>
+          <th>Produit</th>
+          <th>Catégorie</th>
+          <th>Conditionnement</th>
+          <th>Quantité (unité)</th>
+          <th>Prix/unité</th>
+          <th>Prix Total</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let detail of detailPurchasesForms2; let i = index">
+          <td>{{ detail?.product?.name }}</td>
+          <td>{{ detail?.product?.category?.name }}</td>
+          <td>{{ detail?.product?.conditioning?.name }}</td>
+          <td>{{ detail?.quantity }} ({{ detail?.unit?.code }})</td>
+          <td>{{ detail?.value }}/{{ detail?.unit?.code }}</td>
+          <td>{{ detail?.totalPrice }}</td>
+          <td>
+            <button
+              pButton
+              pRipple
+              type="button"
+              icon="pi pi-trash"
+              class="p-button p-component p-button-text p-button-icon-only"
+              (click)="confirmDeleteDetail(detail, i)"
+            ></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-                  <th>Prix/unité</th>
-                  <th>Prix Total </th>
-                  <th></th>
-
-                </thead>
-                <tr *ngFor="let detail of detailPurchasesForms2,let i=index">
-                  <td>{{detail?.product?.name}}</td>
-                  <td>{{detail.product?.category?.name}}</td>
-                  <td>{{detail.product.conditioning?.name}}</td>
-                  <td>{{detail.quantity}} ({{detail.unit.code}})</td>
-                  <td>{{detail.value}}/{{detail.unit.code}}</td>
-                  <td>{{detail.totalPrice}}</td>
-                  <td>
-                    <button pButton pRipple type="button"   icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only" (click)="confirmDeleteDetail(detail,i)"></button>
-                  </td>
-
-                </tr>
-
-              </table>
-              </div>
-
-            </div>
 
 
 
